--- a/.env.dist
+++ b/.env.dist
@@ -7,3 +7,4 @@ AUTH_RESET_PASSWORD_EXPIRES_MIN=60
 DB_URL="mongodb+srv://<user>:<password>@countrycode0.o6zwdph.mongodb.net/<dbName>?retryWrites=true&w=majority"
 
 LOG_TYPE="file"
+LOG_PASSWORD="password"
