--- a/config/smart-api.yaml
+++ b/config/smart-api.yaml
@@ -100,6 +100,13 @@ consultations:
     schema:
         timestamps: true
         fields:
+            cid:
+                type: String
+                required: true
+                auto:
+                    pattern: increment
+                    prefix: "C"
+                    length: 6
             patient:
                 type: objectId
                 required: true
