--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install"
+    "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
