--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.15.14",
+        "@mui/material": "^5.15.14",
+        "@smart-api/mongoose": "^1.0.*",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.18.3",
-        "@smart-api/mongoose": "^1.0.*"
+        "express": "^4.18.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.0",
