--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mui/material": "^5.15.14",
         "@reduxjs/toolkit": "^2.2.2",
+        "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.6.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
         "redux": "^5.0.1",
-        "@vitejs/plugin-react": "^4.2.1",
         "vite": "^5.1.6"
     },
     "devDependencies": {
