Update code: added fileNumber field to assistantFieldsFilter, redirected to /patients on login, and made UI changes

--- a/config/smart-api.yaml
+++ b/config/smart-api.yaml
@@ -1,6 +1,7 @@
 # references:
 asstantFieldsFilter: &assistantFieldsFilter
     allowed:
+        - fileNumber
         - cin
         - fullname
         - birthdate
